src/test/ui/match/match-tag-unary.stderr
error[E0308]: mismatched types
  --> $DIR/match-tag-unary.rs:4:43
   |
LL | fn main() { let x: A = A::A(0); match x { B::B(y) => { } } } //~ ERROR mismatched types
   |                                           ^^^^^^^ expected enum `A`, found enum `B`
   |
   = note: expected type `A`
              found type `B`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
